# projectomatic

./: .gitignore  README.md  default.nix  projectomatic.cabal  projectomatic.sql
snaplets/postgresql-simple/: devel.cfg
src/: Application.hs  Main.hs  Site.hs
